--- a/forget.html
+++ b/forget.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-     
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
-            FB/forget password
+            forget password
         </title>
         <style>
         @import "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" ;
