--- a/CreateAccount.html
+++ b/CreateAccount.html
@@ -19,7 +19,7 @@
         height: 50px;
          }
         .logo {
-                font-size: 25px;
+                font-size: 40px;
         }
         input {
             margin-bottom: 10px;
@@ -51,7 +51,7 @@
                 <input type="radio" name="" value=""><label>Male</label>
                 <input type="radio" name="" value=""><label>Female</label>
                 <input type="radio" name="" value=""><label>Others</label><br>
-                <a><button>Create</button></a>
+                <a href="./Account.html"><button>Create</button></a>
             </fieldset>
         </nav>
         <footer>
