--- a/forget.html
+++ b/forget.html
@@ -18,7 +18,7 @@
                 height: 50px;
             }
             .logo {
-                font-size: 25px;
+                font-size: 40px;
             }
             input {
                 margin-bottom: 20px;
@@ -44,7 +44,7 @@
             <label>New Password:</label>
             <input type="text" placeholder="New password" name="" value="" style="margin-left: 20px;"><br>
             <a href="./CreateAccount.html" target="_default"><button>Create a Account</button></a>
-            <button>New Password</button>
+            <a href="./Successfulpass.html" target="_default"><button>New Password</button></a>
 
 
             </fieldset>
